--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         It is home to the world’s largest mangrove forest, the Sundarbans, and the longest sea beach in Cox’s Bazar. The
         country has a tropical climate with lush green fields and rivers flowing across its land. Agriculture,
         especially rice and </p>
+        <p>gladesh is a beautiful country in South Asia, known for its rich culture, natural beauty, and friendly people.
+        It is home to the world’s largest mangrove forest, the Sundarbans, and the longest sea beach in Cox’s Bazar. The
+        country has a tropical climate with lush green fields and rivers flowing across its land. Agriculture,
+        especially rice and </p>
 </body>
 
 </html>
